Fix community-buttons on small devices

--- a/themes/peppercarrot-theme_v2/css/theme.css
+++ b/themes/peppercarrot-theme_v2/css/theme.css
@@ -319,7 +319,7 @@ input[type=search] { margin: 1.2rem 0 1.2rem 0; max-width: 300px; }
 .moreinfobutton {position: absolute; top: 200px; right: 0; width: 180px; }
 .communityblock h3{ font-size: 1.6rem; }
 .communitybutton {font-size: 1rem; }
-.communitybutton a { display: inline; min-width: 250px;}
+.communitybutton a { display:inline-block; min-width: 100%;}
 }
 
 /* small devices */
@@ -327,6 +327,8 @@ input[type=search] { margin: 1.2rem 0 1.2rem 0; max-width: 300px; }
 .cover { background: url('../img/pepper-carrot-cover5_by-david-revoy.jpg') no-repeat 15% 80%; }
 .cover h1 { font-size: 1.8rem; margin: 0.3rem 0 0.4rem 0; width: 380px; }
 .covertextoverlay { right: 1.3rem;}
+.communitysocket { min-height: 550px;}
+.communityblock { min-height: 550px;
 }
 
 @media (max-width: 770px) {
